--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "habitat": "^3.1.2",
     "jsonfile": "^2.3.1",
     "node-sass": "^3.8.0",
+    "node-schedule": "^1.1.1",
     "npm-run-all": "^2.2.0",
     "postcss-cli-simple": "^1.0.1",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "underscore": "^1.8.3"
   }
 }
