--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "npm-run-all": "^2.2.0",
     "postcss-cli-simple": "^1.0.1",
     "request": "^2.72.0",
+    "text-miner": "^1.0.5",
     "underscore": "^1.8.3"
   }
 }
