--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "request": "^2.72.0",
     "text-miner": "^1.0.5",
     "underscore": "^1.8.3"
-  }
+  },
+  "engines": { 
+    "node" : "^6.0.0" 
+  } 
 }
