--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   },
   "main": "server.js",
   "scripts": {
-    "prestart": "npm run build && npm run copy-d3-cloud",
+    "prestart": "npm run build && npm run copy",
     "start": "npm-run-all --parallel start-server watch",
     "start-server": "node server.js",
     "build": "npm run build:scss",
     "build:scss": "node-sass scss/style.scss public/style.css && postcss --use autoprefixer --autoprefixer.browsers 'last 3 versions' -o public/style.css public/style.css",
     "watch": "npm run watch:scss",
     "watch:scss": "chokidar 'scss/**/*' -c 'npm run build:scss'",
-    "copy-d3-cloud": "cp node_modules/d3-cloud/build/d3.layout.cloud.js public/js/lib/d3.layout.cloud.js",
+    "copy": "npm-run-all copy:**",
+    "copy:d3-cloud": "cp node_modules/d3-cloud/build/d3.layout.cloud.js public/js/lib/d3.layout.cloud.js",
     "test": "npm-run-all test:**",
     "test:scss": "stylelint '**/*.scss' --syntax scss"
   },
